--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section id="About" class="about">
       <div class="about-container">
-        <img src="/qhawe-img.jpg" alt="">
+        <img src="qhawe-img.jpg" alt="">
     
         <div class="info-box">
           <h3>Hi, I’m</h3>
@@ -344,4 +344,5 @@
     <script src="profile.js"></script>
 </body>
 </html>
+
 
