--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="project-grid">
  
     <div class="project-card">
-      <img src="/assets/web development.webp" alt="">
+      <img src="web development.webp" alt="">
       <h3>Employee Manangment system</h3>
       <p>I developed a web-based Mine Management System that helps mining companies efficiently track equipment, monitor employee activities, assign supervisors, and generate detailed reports. This system improves safety and productivity by providing real-time data and role-based access control. The app is built using ASP.NET Core, React.js, Bootstrap, and SQL Server.</p>
       <div class="btn-group">
@@ -344,6 +344,7 @@
     <script src="profile.js"></script>
 </body>
 </html>
+
 
 
 
