--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="project-grid">
  
     <div class="project-card">
-      <img src="web development.webp" alt="">
+      <img src="/web development.webp" alt="">
       <h3>Employee Manangment system</h3>
       <p>I developed a web-based Mine Management System that helps mining companies efficiently track equipment, monitor employee activities, assign supervisors, and generate detailed reports. This system improves safety and productivity by providing real-time data and role-based access control. The app is built using ASP.NET Core, React.js, Bootstrap, and SQL Server.</p>
       <div class="btn-group">
@@ -208,7 +208,7 @@
     </div>
     
     <div class="project-card">
-      <img src="/assets/android development.jpeg" alt="">
+      <img src="/android development.jpeg" alt="">
       <h3>Student Manangement Mobile Application</h3>
       <p>I built a Java application that allows users to add students, assign tasks to them, and display the list of students with their tasks. This app helps organize and track student responsibilities efficiently, making it easy to manage assignments and monitor progress in a simple and user-friendly way.</p>
       <div class="btn-group">
@@ -218,7 +218,7 @@
     </div>
     
     <div class="project-card">
-      <img src="/assets/data analysis.png" alt="">
+      <img src="/data analysis.png" alt="">
       <h3>Data Visulasation Dashboard</h3>
       <p>I design interactive Tableau dashboards that transform complex data into clear and actionable visual insights. These dashboards cover areas such as student performance, mining operations, and key business metrics, helping decision-makers quickly understand trends and make informed decisions.</p>
       <div class="btn-group">
@@ -344,6 +344,7 @@
     <script src="profile.js"></script>
 </body>
 </html>
+
 
 
 
