--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 
     <section id="About" class="about">
       <div class="about-container">
-        <img src="/qhawe-img.jpg" alt="">
-    <img src="https://maqhawe07124737307.github.io/qhawe-img.jpg" alt="Test Image">
+       <img src="qhawe-img.jpg" alt="Test Image">
         <div class="info-box">
           <h3>Hi, I’m</h3>
           <h1>Maqhawe Dube</h1>
@@ -344,6 +343,7 @@
     <script src="profile.js"></script>
 </body>
 </html>
+
 
 
 
